# safespace

./: .gitignore  README.md  action_plan.md  requirements.txt
.cursor/rules/: db.mdc  do-not.mdc
safespace_pkg/: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  cloudrepo_setup.md  pyproject.toml  requirements.txt  safespace.sh  setup.py
safespace_pkg/safespace/: __init__.py  __main__.py  artifact_cache.py  bio.py  bio_cli.py  cli.py  container.py  dependency_cli.py  dependency_manager.py  environment.py  health_cli.py  network.py  resource_manager.py  settings.py  settings_cli.py  state_db.py  templates.py  testing.py  utils.py  vm.py
safespace_pkg/safespace/docs/: README.md  __init__.py  documentation.json  documentation_cli.py  usage_examples.md
safespace_pkg/safespace/internal/: __init__.py  load_environment.py  requirements.txt
safespace_pkg/tests/: README.md  __init__.py  conftest.py  test_safespace.py
safespace_pkg/~/: .netrc  .pypirc
safespace_pkg/~/.config/pip/: pip.conf
